Refactor VectorStore#add to accept paired EmbeddedDocument objects
Signed-off-by: Aniket Gupta <70100745+aniketg-21@users.noreply.github.com>